matrices: editing mode overflow fix; + minor fixes

--- a/src/browser/scss/_editor.scss
+++ b/src/browser/scss/_editor.scss
@@ -281,7 +281,7 @@
             top:-5rem;
             right:0;
             left:-5rem;
-            bottom:-5em;
+            bottom:-5rem;
         }
     }
     &.ui-resizable-s {
