--- a/src/browser/scss/_layout.scss
+++ b/src/browser/scss/_layout.scss
@@ -21,7 +21,6 @@ body {
 .navigation {
     height:var(--nav-height);
     margin-bottom: 1rem;
-    margin-left: 1rem;
     flex-shrink:0;
     font-weight:bold;
     text-transform: uppercase;
